--- a/pages/website/components.html
+++ b/pages/website/components.html
@@ -1,52 +1,83 @@
-<!DOCTYPE html>
-<html lang="en">
+<!doctype html>
+<html lang="en" data-theme="dark">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Shoelace Components Demo</title>
-  <link rel="stylesheet" href="css/styles.css" />
-  <link rel="stylesheet" href="css/theme.css" />
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@shoelace-style/shoelace@2.16.0/dist/themes/light.css" />
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta
+    name="description"
+    content="Explore Shoelace component examples with consistent theming and styles."
+  />
+  <title>Component Gallery | Mind Engine</title>
+
+  <link rel="stylesheet" href="../../styles/index.css" />
+  <link rel="stylesheet" href="../../styles/layout/app-layout.css" />
+
+  <link
+    rel="stylesheet"
+    href="https://cdn.jsdelivr.net/npm/@shoelace-style/shoelace@2.16.0/dist/themes/dark.css"
+  />
   <script type="module" src="https://cdn.jsdelivr.net/npm/@shoelace-style/shoelace@2.16.0/dist/shoelace.js"></script>
-  <style>
-    .gallery { max-width: 800px; margin: 0 auto; padding: var(--space-lg); }
-    .gallery section { margin-bottom: var(--space-xl); }
-    .gallery h3 { margin-bottom: var(--space-md); }
-    .gallery .gp-sm { gap: var(--space-sm); }
-  </style>
 </head>
 <body>
-  <main class="gallery">
-    <h2>Shoelace Component Gallery</h2>
-    <section>
-      <h3>Buttons</h3>
-      <div class="gp-sm d-flex">
+  <main class="app-main">
+    <section class="app-section app-section--hero">
+      <sl-card>
+        <header class="app-card__header">
+          <h1>Component Gallery</h1>
+          <sl-badge variant="info" pill>Interactive</sl-badge>
+        </header>
+        <p>Explore Shoelace components styled with our design system tokens.</p>
+      </sl-card>
+    </section>
+
+    <section class="app-section">
+      <sl-card>
+        <header class="app-card__header">
+          <h2>Buttons</h2>
+        </header>
+        <div class="app-actions">
         <sl-button variant="primary">Primary</sl-button>
         <sl-button variant="secondary">Secondary</sl-button>
         <sl-button variant="success">Success</sl-button>
         <sl-button variant="danger">Danger</sl-button>
         <sl-button variant="warning">Warning</sl-button>
-      </div>
+        </div>
+      </sl-card>
     </section>
-    <section>
-      <h3>Badges</h3>
-      <div class="gp-sm d-flex">
+
+    <section class="app-section">
+      <sl-card>
+        <header class="app-card__header">
+          <h2>Badges</h2>
+        </header>
+        <div class="app-actions">
         <sl-badge variant="primary">Primary</sl-badge>
         <sl-badge variant="success">Success</sl-badge>
         <sl-badge variant="danger">Danger</sl-badge>
         <sl-badge variant="warning">Warning</sl-badge>
         <sl-badge pill variant="secondary">Secondary pill</sl-badge>
-      </div>
+        </div>
+      </sl-card>
     </section>
-    <section>
-      <h3>Alerts</h3>
+
+    <section class="app-section">
+      <sl-card>
+        <header class="app-card__header">
+          <h2>Alerts</h2>
+        </header>
       <sl-alert variant="primary" open>Primary alert!</sl-alert>
       <sl-alert variant="success" open>Success alert!</sl-alert>
       <sl-alert variant="danger" open>Danger alert!</sl-alert>
       <sl-alert variant="warning" open>Warning alert!</sl-alert>
+      </sl-card>
     </section>
-    <section>
-      <h3>Inputs & Forms</h3>
+
+    <section class="app-section">
+      <sl-card>
+        <header class="app-card__header">
+          <h2>Inputs & Forms</h2>
+        </header>
+        <div class="app-form">
       <sl-input label="Email" placeholder="mail@domain.com"></sl-input>
       <sl-textarea label="Message" placeholder="Type your message"></sl-textarea>
       <sl-select label="Select an option">
@@ -55,17 +86,31 @@
       </sl-select>
       <sl-checkbox>Remember me</sl-checkbox>
       <sl-switch>Enable feature</sl-switch>
-    </section>
-    <section>
-      <h3>Cards, Avatars & Progress</h3>
-      <sl-card>
-        <strong>Card</strong>
-        <p>This is a Shoelace card component.</p>
+        </div>
       </sl-card>
-      <sl-avatar label="Shoelace" image="assets/images/avatar.jpg"></sl-avatar>
-      <sl-progress-bar value="70"></sl-progress-bar>
+    </section>
+
+    <section class="app-section">
+      <sl-card>
+        <header class="app-card__header">
+          <h2>Cards, Avatars & Progress</h2>
+        </header>
+        <div class="app-actions">
+          <sl-card>
+            <strong>Card Example</strong>
+            <p>This is a Shoelace card component.</p>
+          </sl-card>
+          <sl-avatar label="Shoelace" image="../../assets/images/jason.jpg"></sl-avatar>
+          <sl-progress-bar value="70"></sl-progress-bar>
+        </div>
+      </sl-card>
     </section>
   </main>
+
+  <footer class="app-footer">
+    <span>&copy; 2025 Mind Engine • Component Gallery</span>
+    <sl-button variant="text" href="../../index.html">Back to home</sl-button>
+  </footer>
   <!-- Shoelace component imports -->
   <script type="module" src="https://cdn.jsdelivr.net/npm/@shoelace-style/shoelace@2.16.0/dist/components/button/button.js"></script>
   <script type="module" src="https://cdn.jsdelivr.net/npm/@shoelace-style/shoelace@2.16.0/dist/components/badge/badge.js"></script>
